# 16-833_slam_project

./: .gitignore  CMakeLists.txt  MapBuilder.ipynb  README.md  build_and_run
data/: MapBuilder.ipynb  Mapreader.ipynb  add_coridoor.txt  add_map.txt  add_map2.txt  add_map3.txt  add_map_test.txt  map6.txt  map7.txt
data/.ipynb_checkpoints/: Mapreader-checkpoint.ipynb
include/: GMM_update.h  MapReader.h  belief.h  controller.h  graph.h  information_gain.h  node.h  search.h  spawn_modes.h  test.h  utils.h
src/: MapReader.cpp  belief.cpp  controller.cpp  graph.cpp  main.cpp  node.cpp  search.cpp  test.cpp
